test/types/records/vass/method-of-parent-record-1.good
method-of-parent-record-1.chpl:5: error: inheritance is not currently supported for records
method-of-parent-record-1.chpl:5: note: B declared as a record here
